Update 3.Integración de ramas.md

--- a/1.Git/3.Integración de ramas.md
+++ b/1.Git/3.Integración de ramas.md
@@ -1,1 +1,28 @@
+<img width="884" alt="Captura de Pantalla 2023-06-07 a la(s) 13 05 01" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/d25748cd-e522-4225-87bb-165402776c66">
 
+
+
+<img width="505" alt="Captura de Pantalla 2023-06-07 a la(s) 13 10 59" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ca52bbba-83f8-4683-868c-1c686ca4c781">
+
+
+
+<img width="505" alt="Captura de Pantalla 2023-06-07 a la(s) 13 10 37" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ad7bd7b4-5ae4-4948-bfed-81bf9d4a5da8">
+
+
+
+<img width="757" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 02" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ecd8b0c3-3228-4a65-af3b-6e43316c6e48">
+
+
+
+
+
+
+<img width="812" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 54" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/43d6e245-8562-4ecd-9dfd-e6dc99d39e6f">
+
+
+
+
+
+
+
+<img width="1049" alt="Captura de Pantalla 2023-06-07 a la(s) 13 13 11" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/bc20c5e9-d371-47eb-a951-c9e44beefe3f">
