--- a/1.Git/3.Integración de ramas.md
+++ b/1.Git/3.Integración de ramas.md
@@ -1,13 +1,10 @@
+
+Se crear el archivo en la rama Test
 <img width="884" alt="Captura de Pantalla 2023-06-07 a la(s) 13 05 01" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/d25748cd-e522-4225-87bb-165402776c66">
 
 
-
+Se hace el commit y push a la rama Test
 <img width="505" alt="Captura de Pantalla 2023-06-07 a la(s) 13 10 59" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ca52bbba-83f8-4683-868c-1c686ca4c781">
-
-
-
-<img width="505" alt="Captura de Pantalla 2023-06-07 a la(s) 13 10 37" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ad7bd7b4-5ae4-4948-bfed-81bf9d4a5da8">
-
 
 
 <img width="757" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 02" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ecd8b0c3-3228-4a65-af3b-6e43316c6e48">
