Update 3.Integración de ramas.md

--- a/1.Git/3.Integración de ramas.md
+++ b/1.Git/3.Integración de ramas.md
@@ -1,18 +1,22 @@
 
-Se crear el archivo en la rama Test
+Se crear el commit en la rama Test
+
+<img width="505" alt="Captura de Pantalla 2023-06-07 a la(s) 13 10 59" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ca52bbba-83f8-4683-868c-1c686ca4c781">
+
+Se hace push a la rama Test
+
+
 <img width="884" alt="Captura de Pantalla 2023-06-07 a la(s) 13 05 01" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/d25748cd-e522-4225-87bb-165402776c66">
 
 
-Se hace el commit y push a la rama Test
-<img width="505" alt="Captura de Pantalla 2023-06-07 a la(s) 13 10 59" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ca52bbba-83f8-4683-868c-1c686ca4c781">
+Se obtiene el id del commit
 
+git lg 
 
 <img width="757" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 02" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ecd8b0c3-3228-4a65-af3b-6e43316c6e48">
 
 
-
-
-
+Se pasa a la rama main
 
 <img width="812" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 54" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/43d6e245-8562-4ecd-9dfd-e6dc99d39e6f">
 
