--- a/1.Git/3.Integración de ramas.md
+++ b/1.Git/3.Integración de ramas.md
@@ -16,14 +16,11 @@ git lg
 <img width="757" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 02" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/ecd8b0c3-3228-4a65-af3b-6e43316c6e48">
 
 
-Se pasa a la rama main
+Se pasa a la rama main y se ejecuta 
+
+git cherry-pick c68190a
 
 <img width="812" alt="Captura de Pantalla 2023-06-07 a la(s) 13 12 54" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/43d6e245-8562-4ecd-9dfd-e6dc99d39e6f">
-
-
-
-
-
 
 
 <img width="1049" alt="Captura de Pantalla 2023-06-07 a la(s) 13 13 11" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/bc20c5e9-d371-47eb-a951-c9e44beefe3f">
