Update 2.Unión y Almacenamiento de ramas.md

--- a/1.Git/2.Unión y Almacenamiento de ramas.md
+++ b/1.Git/2.Unión y Almacenamiento de ramas.md
@@ -1,1 +1,17 @@
 
+
+Se crea el archivo y se ejecuta 
+
+git stash
+
+<img width="555" alt="Captura de Pantalla 2023-06-07 a la(s) 12 51 49" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/378de882-2da8-4c16-9e96-3aaae488a4f0">
+
+
+Se ejecuta el merge desde la rama main 
+
+<img width="937" alt="Captura de Pantalla 2023-06-07 a la(s) 12 46 12" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/6b1c7b1a-6af9-4167-baa0-b3ee60bb8ffa">
+
+
+Se obtiene el stash 
+
+<img width="884" alt="Captura de Pantalla 2023-06-07 a la(s) 12 52 26" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/8f9e1aef-38be-4a9e-ba87-77bcb91f3c8e">
