Update 2.Unión y Almacenamiento de ramas.md

--- a/1.Git/2.Unión y Almacenamiento de ramas.md
+++ b/1.Git/2.Unión y Almacenamiento de ramas.md
@@ -6,6 +6,12 @@ git stash
 
 <img width="555" alt="Captura de Pantalla 2023-06-07 a la(s) 12 51 49" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/378de882-2da8-4c16-9e96-3aaae488a4f0">
 
+Ramas actualmente 
+
+<img width="937" alt="Captura de Pantalla 2023-06-07 a la(s) 12 34 51" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/549630d7-d23f-47f8-bf11-c3e1350ac17c">
+
+![image](https://github.com/jose-aese/wizeline-entregable1/assets/45864492/97bba065-be4b-4500-a696-04f21aa48cd0)
+
 
 Se ejecuta el merge desde la rama main 
 
