Update 3.Integración de ramas.md

--- a/1.Git/3.Integración de ramas.md
+++ b/1.Git/3.Integración de ramas.md
@@ -11,6 +11,10 @@ Se cambia de rama y se ejecuta el rebase
 <img width="884" alt="Captura de Pantalla 2023-06-07 a la(s) 13 05 01" src="https://github.com/jose-aese/wizeline-entregable1/assets/45864492/d25748cd-e522-4225-87bb-165402776c66">
 
 
+
+git cherry-pick
+
+
 Se obtiene el id del commit
 
 git lg 
